All pieces and basic movements done

--- a/Projet_2302222_2291387/Projet_2302222_2291387.vcxproj
+++ b/Projet_2302222_2291387/Projet_2302222_2291387.vcxproj
@@ -99,10 +99,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <QtMoc Include="Chessboard.h" />
+    <QtMoc Include="MainMenu.h" />
     <ClInclude Include="Piece.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chessboard.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
