--- a/Projet_2302222_2291387/Projet_2302222_2291387.vcxproj
+++ b/Projet_2302222_2291387/Projet_2302222_2291387.vcxproj
@@ -100,9 +100,11 @@
   <ItemGroup>
     <QtMoc Include="Chessboard.h" />
     <QtMoc Include="MainMenu.h" />
+    <QtMoc Include="..\..\..\..\..\OneDrive\Desktop\PromotionDialog.h" />
     <ClInclude Include="Piece.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\OneDrive\Desktop\PromotionDialog.cpp" />
     <ClCompile Include="Chessboard.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Piece.cpp" />
