--- a/Projet_2302222_2291387/Projet_2302222_2291387.vcxproj.filters
+++ b/Projet_2302222_2291387/Projet_2302222_2291387.vcxproj.filters
@@ -40,12 +40,18 @@
     <ClCompile Include="MainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PromotionDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Chessboard.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="MainMenu.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="PromotionDialog.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
